syntax = "proto3";
import "services/customer/proto/customer.proto";
import "google/protobuf/empty.proto";
import "internal/proto/common.proto";
package pb;
option go_package = "./;pb";

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    string role = 5;
    Customer customer = 6;
}

message UserInput {
    string username = 1;
    string password = 2;
    string email = 3;
    string role = 4;
    optional string customerId = 5;
}

message Users {
    repeated User users = 1;
}

message LoginRequest {
    User user = 1;
}

message LoginResponse{
    string jwtToken = 1;
    int64 expireTime = 2;
}

service UserService {
    rpc PostUser (UserInput) returns (User) {}
    rpc GetUser (UUID) returns (User) {}
    rpc GetUsers (google.protobuf.Empty) returns (Users) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
}
